# vehicle_interface

./: CMakeLists.txt  README.md  package.xml
include/vehicle_interface/: can_message_receiver_node.hpp  can_message_sender_node.hpp
launch/: vehicle_interface.launch.xml
src/: can_message_receiver_node.cpp  can_message_sender_node.cpp  receiver_main.cpp  sender_main.cpp
